  saved/restored when performing a GC. This could potentially lead to a
  segfault.
  (Nicolás Ojeda Bär, report by Xavier Leroy, review by Xavier Leroy)

- #9909: Remove caml_code_area_start and caml_code_area_end globals (no longer
  needed as the pagetable heads towards retirement).
  (David Allsopp, review by Xavier Leroy)

### Code generation and optimizations:

- #9551: ocamlc no longer loads DLLs at link time to check that
  external functions referenced from OCaml code are defined.
  Instead, .so/.dll files are parsed directly by pure OCaml code.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer,
   Anil Madhavapeddy, and Xavier Leroy)

- #9620: Limit the number of parameters for an uncurried or untupled
   function.  Functions with more parameters than that are left
   partially curried or tupled.
   (Xavier Leroy, review by Mark Shinwell)

- #9752: Revised handling of calling conventions for external C functions.
   Provide a more precise description of the types of unboxed arguments,
   so that the ARM64 iOS/macOS calling conventions can be honored.
   (Xavier Leroy, review by Mark Shinwell and Github user @EduardoRFS)

- #9838: Ensure that Cmm immediates are generated as Cconst_int where
  possible, improving instruction selection.
  (Stephen Dolan, review by Leo White and Xavier Leroy)

### Standard library:

- #9865: add Format.pp_print_seq
  (Raphaël Proust, review by Nicolás Ojeda Bär)

- #9781: add injectivity annotations to parameterized abstract types
  (Jeremy Yallop, review by Nicolás Ojeda Bär)

* #9765: add init functions to Bigarray.
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär, and
   Xavier Leroy)

* #9554: add primitive __FUNCTION__ that returns the name of the current method
  or function, including any enclosing module or class.
  (Nicolás Ojeda Bär, Stephen Dolan, review by Stephen Dolan)

- #9075: define to_rev_seq in Set and Map modules.